tests/lib/01-invalid-matrix.rs
use matrize::*;

fn main() {
    let _ = Matrix::<1, 2>::square(1);
}
